--- a/asynchLists.html
+++ b/asynchLists.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Async JavaScript</title>
+    <!-- This assignment practices asynchronous JavaScript lists -->
 </head>
 <body>
-    <h1>Async JavaScript</h1>
+    <h1>Asynchronous JavaScript</h1>
     <script src="asynchLists.js"></script>
 </body>
 </html>
