--- a/asynchLists.html
+++ b/asynchLists.html
@@ -2,11 +2,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Async JavaScript</title>
+    <title>Asynchronous JavaScript Assignment</title>
     <!-- This assignment practices asynchronous JavaScript lists -->
+    <style>
+        ul {
+            list-style-type: none;
+        }
+        h2 {
+            margin-bottom: 0;
+            text-transform: capitalize;
+        }
+    </style>
 </head>
 <body>
     <h1>Asynchronous JavaScript</h1>
+    <ul class="todos">
+    </ul>
+    
     <script src="asynchLists.js"></script>
 </body>
 </html>
