--- a/asynchLists.html
+++ b/asynchLists.html
@@ -15,7 +15,8 @@
     </style>
 </head>
 <body>
-    <h1>Asynchronous JavaScript</h1>
+    <h1>Topics to Study</h1>
+    
     <ul class="todos">
     </ul>
     
